<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/icon_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/cost"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cost"
            app:srcCompat="@drawable/ic_money_24" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/cost_of_service"
            app:layout_constraintStart_toEndOf="@+id/icon_cost"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/costText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/question"
            app:layout_constraintEnd_toStartOf="@+id/question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/question"
            app:srcCompat="@drawable/ic_service_24" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/icon_service_question"
        app:layout_constraintTop_toBottomOf="@+id/cost"
        android:text="@string/how_was_the_service"
        android:layout_marginTop="16dp"
        />

    <RadioGroup
        android:id="@+id/tip_option"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/icon_service_question"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/question">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/amazing"
            android:text="@string/amazing_20" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/good"
            android:text="@string/good_18"    />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/okay"
            android:text="@string/okay_15"    />

    </RadioGroup>

        <ImageView
            android:id="@+id/icon_round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/round_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/round_up"
            app:srcCompat="@drawable/ic_call_made_24" />

        <Switch
            android:id="@+id/round_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tip_option"
            app:layout_constraintTop_toBottomOf="@+id/tip_option"
            android:text="@string/round_up_tip"
            android:checked="true" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@+id/round_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        app:layout_constraintTop_toBottomOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Tip Amount: $0"
        android:text="@string/tip_amount"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>